--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -194,3 +194,35 @@ ul {
 footer{
     color: aliceblue;
 }
+
+form{
+    color:rgba(14, 14, 13, 0.952);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content:space-evenly;
+}
+.datos {
+    background-color: rgb(255, 255, 255);
+    color: rgb(145, 118, 118);
+    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-decoration: dotted;
+    border-color: red;
+    border-style: double;
+    width: 30vw;
+    height: 35vh;
+}
+
+legend{
+    background-color: aliceblue;
+    color: black;
+    font-size: 1.2rem;
+}
+
+.img_rompe{
+    display: flex;
+    flex-direction: column-reverse;
+}
