--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,6 +10,7 @@ body{
     background-color: black;
     z-index: -2;
 }
+
 .linea_navegador {
     background-image: url(../Images/navegador.jpg);
     position: sticky;
@@ -282,3 +283,148 @@ h3{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 2rem;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+    .linea_navegador {
+        flex-direction: row;
+        width: 100vw;
+    }
+    .navegador_principal {
+        flex-flow: column;
+        width: 10%;
+        font-size: 0.6rem;
+    }
+    .LOGO{
+        width: 10%;
+        
+    }
+    .TITULOS{
+        margin-top: 2rem;
+        font-size: 1rem;
+    }
+    .sub_titulo{
+        font-size: 2rem;
+    }
+    .parrafo_secu_index{
+        font-size: 2rem;
+        display: flex;
+        align-items: left;
+        justify-content:left;
+    }
+    .IMG_secun{
+        display: none;
+    }
+    .UNO {
+        width: 100%;
+    }
+    .img_Tex{
+        width: 45vw;
+        height: 25vh;
+    }
+    .texto {
+        font-size: 0.9rem;
+    }
+    .texto2 {
+        font-size: 0.9rem;
+    }
+    .texto3 {
+        font-size: 0.9rem;
+    }
+    .CONT1{
+        font-size: 1rem;
+        width: 65vw;
+        display: flex;
+        justify-content: right;
+    }
+    .NAVI{
+        width: 75vw;
+        justify-content: space-between;
+        font-size: 0.9rem;
+    }
+    table {
+        font-size: 0.5rem;
+    }
+    .fotoOne{
+        width: 70vw;
+    }
+    .fotoTwo{
+        width: 70vw;
+    }
+    .primer_lista{
+        margin-top: 1rem;
+        font-size: 0.7rem;
+    }
+    .segunda_lista{
+        font-size:0.7rem;
+        margin-bottom: 1rem;
+    }
+    .img_rompe{
+        display: none;
+    }
+    form{
+        width: 100vw;
+        height: 50vh;
+        
+    }
+    .datos{
+        font-size: 0.6rem;
+    }
+    .bot_Input{
+        width: 18vw;
+        font-size: 0.8rem;
+    }
+}
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+        .navegador_principal {
+            width: 60vw;
+            justify-content: center;
+            align-content: center;
+            font-size: 0.8rem;
+            }
+        
+            .LOGO {
+                width: 10%;
+            }
+        .IMG_secun{
+            justify-content: space-evenly;
+            margin-top:  1rem;
+            margin-right: 10VW;
+            width: 20vw;
+            height: 10vh;
+        }
+        .parrafo_secu_index{
+            justify-content: center;
+
+            font-size: 1rem;
+        }
+            }
+        .texto {
+            font-size: 1rem;
+        }
+        
+        .texto2 {
+            font-size: 1rem;
+        }
+        
+        .texto3 {
+            font-size: 1rem;
+        }
+        .NAVI {
+            display: flex;
+            width: 60vw;
+            justify-content: center;
+            font-size: 1rem;
+        }
+
+        .img_rompe{
+            display: none;
+        }
+        .bot_Input {
+            width: 38vw;
+            font-size: 0.8rem;
+        }
+        .final{
+            margin-top: 2rem;
+        }
+
+    }
