--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,7 +25,7 @@ body{
 .navegador_principal{
     display: flex;
     align-items:flex-end;
-    width: 35vw;      
+    width: 75vw;      
 }
 .UNICO{
     display: flex;
@@ -138,16 +138,13 @@ main{
     display: flex;
     align-self: center; 
     width: 27vw;
-    text-align: center;
+    text-align:start;
     font-size: 1.5rem;
     padding: 1.5rem;
 }
-.NAVI{   
-    color: aliceblue;
-    font-style: italic;
-    font-size: 1.2rem;
-    margin: 2rem;
-    padding-inline-start: 20%;
+.navegador_otro{   
+    font-size: 1rem;
+    width: 60vw;
 }
 .foContac{
     display: flex;
@@ -286,18 +283,12 @@ h3{
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .linea_navegador {
-        flex-direction: row;
-        width: 100vw;
+        width: 45vh;
+        justify-content: center;
+        align-content: center;
+        font-size: 0.3rem;
     }
-    .navegador_principal {
-        flex-flow: column;
-        width: 10%;
-        font-size: 0.6rem;
-    }
-    .LOGO{
-        width: 10%;
-        
-    }
+
     .TITULOS{
         margin-top: 2rem;
         font-size: 1rem;
@@ -330,16 +321,20 @@ h3{
     .texto3 {
         font-size: 0.9rem;
     }
-    .CONT1{
-        font-size: 1rem;
-        width: 65vw;
-        display: flex;
-        justify-content: right;
+    .UNICAIMG{
+        justify-content: center;
+        width: 1vw;
+        height: 90vh;
     }
-    .NAVI{
-        width: 75vw;
-        justify-content: space-between;
-        font-size: 0.9rem;
+    .todo{
+        align-items: center;
+        flex-wrap: wrap ;
+        width: 100vw;
+        height: 100vh;
+    }
+    .CONT1{
+        width: 30vw;
+        font-size: 1rem;
     }
     table {
         font-size: 0.5rem;
@@ -388,9 +383,9 @@ h3{
         .IMG_secun{
             justify-content: space-evenly;
             margin-top:  1rem;
-            margin-right: 10VW;
-            width: 20vw;
-            height: 10vh;
+            margin-right: 10vw;
+            width: 40vw;
+            height: 30vh;
         }
         .parrafo_secu_index{
             justify-content: center;
@@ -410,10 +405,9 @@ h3{
             font-size: 1rem;
         }
         .NAVI {
-            display: flex;
-            width: 60vw;
-            justify-content: center;
+            flex-direction: column;
             font-size: 1rem;
+            padding-inline-start: 30%;
         }
 
         .img_rompe{
@@ -426,5 +420,15 @@ h3{
         .final{
             margin-top: 2rem;
         }
-
-    }
+        
+        @media only screen and (min-width: 1023px) {
+        .todo{
+            display: flex;
+            align-items: stretch;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            width: 80%;
+            height: 60%;
+            padding: 2rem;
+        }
